# career-conversations

./: .gitattributes  .gitignore  app.py  main.py  pyproject.toml
me/: Knowledge Base.md  Reid Lawson Caulder Resume.docx  summary.txt
