[project]
name = "career-conversations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.1.0",
    "openai>=2.9.0",
    "openai-agents>=0.6.2",
    "pypdf>=6.4.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
